# ghreposync

./: Cargo.toml  README.md  action.yml  justfile
.github/workflows/: action-test.yml  ci.yml  release.yml
src/: cli.rs  main.rs
src/github/: client.rs  model.rs
src/sync/: labels.rs  milestones.rs  mod.rs
